force-app/main/default/objects/Auto_populate_Commission_Split__mdt/Auto_populate_Commission_Split__mdt.object-meta.xml
<CustomObject>
    <label>Auto populate Commission Split(%)</label>
    <pluralLabel>Auto populate Commission Split(%)</pluralLabel>
</CustomObject>