force-app/main/default/objects/Auto_populate_Commission_Split__mdt/fields/Commission_Credit_Split__c.field-meta.xml
<CustomField>
    <fullName>Commission_Credit_Split__c</fullName>
    <label>Commission/Credit Split(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>