force-app/main/default/objects/Auto_populate_Commission_Split__mdt/fields/isGlobal__c.field-meta.xml
<CustomField>
    <fullName>isGlobal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isGlobal</label>
    <type>Checkbox</type>
</CustomField>