force-app/main/default/objects/Auto_populate_Commission_Split__mdt/fields/Split__c.field-meta.xml
<CustomField>
    <fullName>Split__c</fullName>
    <label>Split (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>