force-app/main/default/objects/Auto_populate_Commission_Split__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Split__c</columns>
    <columns>Commission_Credit_Split__c</columns>
    <columns>isGlobal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>